--- a/package.json
+++ b/package.json
@@ -15,5 +15,7 @@
     "eslint-plugin-import": "^2.14.0",
     "nodemon": "^1.18.9"
   },
-  "dependencies": {}
+  "dependencies": {
+    "ejs": "^2.6.1"
+  }
 }
